# GNS-Euler

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: ns2d_full.json  ns2d_smoke.json
data/: README.md
gns/: __init__.py  cli.py  config.py  factory.py  typing.py
gns/models/: __init__.py  gns.py  processor.py
gns/rollout/: __init__.py  integrators.py  rollout.py
gns/train/: __init__.py  eval.py  losses.py  trainer.py
gns/utils/: __init__.py  checkpoint.py  distributed.py  logging.py  seed.py
tests/: conftest.py  test_checkpoint_resume.py  test_determinism.py  test_eval_loader.py  test_integrator_config.py  test_ns2d_dataset_adapter.py  test_ns2d_trainer_smoke.py  test_rollout_cache.py  test_rollout_smoke.py  test_shapes_device.py  test_train_norm_rollout_loss.py
