[project]
name = "gns"
version = "0.1.0"
description = "Compact, hackable PyTorch GNS-style rollout skeleton"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
gns = "gns.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
